# tenderTag

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  scripts.py  test_pdf_extraction.py  test_pymupdf.py  汇报.md
.claude/: settings.local.json
app/: cli.py  main.py
app/routers/: pdf_process.py  search.py
app/services/: section_tagger.py  tenderTag.py
app/utils/: file_reader.py
backup/: CROSS_PAGE_CELL_MERGE_TODO.md  EMBEDDING_USAGE.md  MILVUS_CELLS_INTEGRATION.md  MODIFICATION_SUMMARY.md  QDRANT_IMPLEMENTATION.md  VECTORIZATION_USAGE.md  analyze_cell_structure.py  check_collection_status.py  check_qdrant_collection.py  debug_column_repair.json  debug_page6.txt  delete_and_recreate_collection.py  diagnose_lines.py  diagnose_nested.py  diagnose_page6_text.py  diagnose_page_number.py  diagnose_sequence_column.py  download_bge_m3.py  force_recreate_collection.py  insert_tender_chunks_with_embedding.py  standalone_embed.sh  test_cells_format.py  test_cells_to_milvus.py  test_compliance_insert.py  test_embedding_choice.py  test_embedding_integration.py  test_extract_before_fix.py  test_footer_filter.py  test_keyword_search.py  test_memory_qdrant.py  test_milvus_direct.py  test_milvus_quick.py  test_model.py  test_output.txt  test_raw_output.txt  test_row_classifier.py  test_section_tagger.py  test_table_extractor_raw.py  test_tender_import.py  verify_corner_grouping.py
web/zc-sub-app-ai-bid-examine/: .env.demo  .env.dev  .env.development  .env.prod  .env.test  .env.test.build  .eslintignore  .eslintrc.cjs  .gitignore  .prettierrc  README.md  index.html  (+5 more)
(+229 files in other folders)
