[project]
name = "tender-tagger"
version = "0.1.0"
description = "Docs classifier for tender/bid files"
authors = [
    {name = "chen21439",email = "14557167+chen21439@user.noreply.gitee.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi (>=0.119.1,<0.120.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "openai (>=2.6.0,<3.0.0)",
    "pymupdf (>=1.26.5,<2.0.0)",
    "qdrant-client (==1.9.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "flagembedding (>=1.3.5,<2.0.0)",
    "pymilvus (>=2.6.3,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "ruff (>=0.14.1,<0.15.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)"
]
